feat: update collision