@@ -9,12 +9,16 @@ import uet.oop.UA.entites.Ball;
 import uet.oop.UA.entites.Brick;
 import uet.oop.UA.entites.GameObject;
 import uet.oop.UA.graphics.Gameloop;
+import static uet.oop.UA.GamePanel.GAME_WIDTH;
+import static uet.oop.UA.GamePanel.GAME_HEIGHT;
 
 public class ArkanoidGame extends JFrame {
-    
+    private static final int WIDTDCOMPLENMENT = 15;
+    private static final int HEIGHTCOMPLENMENT = 30;
+
     public ArkanoidGame() {
         setTitle("Arkanoid Game");
-        setSize(1015, 830);
+        setSize(GAME_WIDTH + WIDTDCOMPLENMENT, GAME_HEIGHT + HEIGHTCOMPLENMENT);
         setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
         setLocationRelativeTo(null);
         setResizable(true);
@@ -23,8 +27,8 @@ public class ArkanoidGame extends JFrame {
         List<GameObject> gameObjects = new ArrayList<>();
         GamePanel gamePanel = new GamePanel(gameObjects);
         GameManager manageGame = new GameManager(gameObjects, gamePanel);
-        Ball ball = new Ball(gameObjects.get(0).getX()+gameObjects.get(0).getWidth()/2-15,
-                gameObjects.get(0).getY()-30, 30 , 30);
+        Ball ball = new Ball(gameObjects.getFirst().getX()+gameObjects.getFirst().getWidth()/2-15,
+                gameObjects.getFirst().getY()-30, 30 , 30);
 
         //gamePanel phải được nhận gameObjects rỗng trước
         //Lí do: muốn thêm object phải dùng method của gamePanel (addObject)
